fixed footer overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -606,7 +606,7 @@ $desktop: 1280px;
   &__content {
     display: flex;
     gap: 16rem;
-    @media(max-width:$mobile){
+    @media(max-width:$desktop){
       flex-direction: column;
       gap:4rem;
       
